[package]
name = "discord_webhook_apod"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
lambda_runtime = "0.13.0"
openssl = { version = "0.10.68", features = ["vendored"] }
reqwest =  { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
